# noisicaa

./: .dir-locals.el  .gitignore  .projectile  CMakeLists.txt  NOTES.org  README.md  default.nix  listdeps  noisicaa.nix  requirements.txt  requirements.ubuntu.pkgs  setup.py  shell.nix  wscript
noisicaa/: CMakeLists.txt  __init__.py  audio_playground.py  constants.py  debug_console.py  editor.py  editor_main.proto  editor_main.py  exceptions.py  file_test.py  fileutil.py  fileutil_test.py  logging.py  pdb.py  runtime_settings.py  rwlock.py  ui_state.py  utils.py  wscript
noisicaa/audioproc/: CMakeLists.txt  __init__.py  ast.py  audio_format.pxd  audio_format.pyx  audio_format_test.py  audio_stream.py  audio_stream_test.py  audioproc.proto  audioproc_client.py  audioproc_client_test.py  audioproc_process.py  backend.py  compiler.py  compiler_test.py  csound.pyx  csound.pyxbld  csound_test.py  data.py  entity.capnp  events.py  exceptions.py  frame.pyx  frame.pyxbld  frame_data.capnp  frame_data_test.py  frame_test.py  libavutil.pxd  libfluidsynth.py  libswresample.pxd  mutations.py  node.pxd  node.py  node.pyx  node_db.py  node_types.py  pipeline.py  pipeline_mutations.capnp  pipeline_test.py  pipeline_vm.py  (+6 more)
noisicaa/bindings/: .#CMakeLists.txt  CMakeLists.txt  csound.pxd  csound.pyx  csound_test.py  fluidsynth.pxd  fluidsynth.pyx  fluidsynth.pyxbld  fluidsynth_test.py  ladspa.pxd  ladspa.pyi  ladspa.pyx  ladspa.pyxbld  ladspa_test.py  ladspa_test.pyx  lilv.pxd  lilv.pyi  lilv.pyx  lilv_test.py  lilv_test.pyx  lilv_test.pyxbld  lv2.pxd  lv2.pyx  lv2.pyxbld  lv2_test.pyx  sndfile.pyi  sndfile.pyx  sndfile.pyxbld  sndfile_test.py  sratom.pxd  sratom.pyi  sratom.pyx  sratom.pyxbld  sratom_test.py  wscript
noisicaa/builtin_nodes/: CMakeLists.txt  client_registry.py  commands_registry.proto  model.tmpl.py  model_registry.proto  model_registry.py  node_description_registry.py  processor_message_registry.proto  processor_registry.cpp  processor_registry.h  server_registry.py  ui_registry.py  wscript
noisicaa/core/: CMakeLists.txt  __init__.py  auto_cleanup_mixin.py  backend_manager.py  backend_manager_test.py  callbacks.py  callbacks_test.py  commands.py  commands_test.py  empty_message.proto  fifo_queue.h  fileutil.py  fileutil_test.py  ipc.proto  ipc.py  ipc_perftest.py  ipc_test.proto  ipc_test.py  logging.cpp  logging.h  logging.pxd  logging.pyi  logging.pyx  logging_test.pyx  message.capnp  message.py  message_test.py  model_base.py  perf_stats.capnp  perf_stats.cpp  perf_stats.h  perf_stats.pxd  perf_stats.py  perf_stats.pyx  perf_stats_test.py  process_manager.proto  process_manager.py  process_manager_entry.py  process_manager_io.py  process_manager_test.py  (+33 more)
noisicaa/devices/: CMakeLists.txt  __init__.py  libalsa.pyi  libalsa.pyx  libalsa.pyxbld  libalsa_test.py  libportmidi.pxd  libportmidi.pyx  libportmidi.pyxbld  libportmidi_test.py  libporttime.pxd  libporttime_test.py  midi_events.py  midi_hub.py  midi_hub_test.py
noisicaa/host_system/: CMakeLists.txt  __init__.py  host_system.cpp  host_system.h  host_system.pxd  host_system.pyi  host_system.pyx  host_system_audio_file.cpp  host_system_audio_file.h  host_system_csound.cpp  host_system_csound.h  host_system_lv2.cpp  host_system_lv2.h  wscript
noisicaa/importers/: CMakeLists.txt  abc.py  abc_filetest.py  abc_parse.py  abc_test.py
noisicaa/instr/: CMakeLists.txt  library.py  library_test.py  model.py  riff.py  soundfont.py  wave.py  wave_test.py  wscript
noisicaa/instrument_db/: CMakeLists.txt  __init__.py  client.py  client_test.py  instrument_db.proto  instrument_description.proto  instrument_description.py  mutations.py  process.py  process_base.py  utils.py  wscript
noisicaa/lv2/: CMakeLists.txt  __init__.py  atom.pxd  atom.pyx  atom_test.py  bufsize.pxd  bufsize.pyx  core.pxd  core.pyx  feature_manager.cpp  feature_manager.h  feature_manager.pxd  feature_manager.pyx  options.pxd  options.pyx  ui_host.cpp  ui_host.h  ui_host.pxd  ui_host.pyx  urid.pxd  urid.pyx  urid_mapper.cpp  urid_mapper.h  urid_mapper.proto  urid_mapper.pxd  urid_mapper.pyi  urid_mapper.pyx  urid_mapper_process.py  urid_mapper_process_test.py  urid_mapper_test.py  worker.pxd  worker.pyx  wscript
noisicaa/model/: CMakeLists.txt  __init__.py  clef.py  color.py  control_value.py  key_signature.py  key_signature_test.py  model_base.proto  model_base.py  model_base_test.proto  model_base_test.py  node_port_properties.py  pitch.py  pitch_test.py  pos2f.py  project.proto  project.py  sizef.py  time_signature.py  time_signature_test.py
noisicaa/model_base/: CMakeLists.txt  __init__.py  model_base.py  model_base_test.proto  model_base_test.py
noisicaa/music/: CMakeLists.txt  __init__.py  base_track.proto  base_track.py  base_track_test.py  beat_track.py  beat_track_test.py  clef.py  clipboard.proto  commands.proto  commands.py  commands_test.py  control_track.py  control_track_test.py  event_set.py  event_set_test.py  exceptions.py  graph.py  graph_test.py  instrument.py  instruments.py  key_signature.py  key_signature_test.py  loadtest_generator.py  loadtest_generator_test.py  metadata.py  misc.py  model.desc.pb  model.proto  model.py  model_base.proto  model_base.py  model_base_test.proto  model_base_test.py  mutations.proto  mutations.py  node_connector.py  (+59 more)
noisicore/: CMakeLists.txt  __init__.py  audio_stream.cpp  audio_stream.h  audio_stream.pxd  audio_stream.pyx  audio_stream_test.py  audio_stream_test.pyx  backend.cpp  backend.h  backend.pxd  backend.pyx  backend_ipc.cpp  backend_ipc.h  backend_ipc_test.pyx  backend_null.cpp  backend_null.h  backend_portaudio.cpp  backend_portaudio.h  backend_test.pyx  block_context.h  block_context.pxd  block_context.pyx  block_data.capnp  buffers.cpp  buffers.h  buffers.pxd  buffers.pyx  buffers_test.pyx  host_data.cpp  host_data.h  host_data.pxd  host_data.pyx  host_system_csound.cpp  host_system_csound.h  host_system_lv2.cpp  host_system_lv2.h  misc.cpp  misc.h  noisicore.h  (+47 more)
testdata/: CMakeLists.txt  future-thunder1.aac  hihat.csnd  kick.csnd  organ.csnd  sf2test.yaml  snare.csnd  wscript
(+1157 files in other folders)
